k8s/aws/ingress-aws-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-lams
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: seq-lams.example.com
spec:
  ingressClassName: alb
